update docs, auth and workflow
