# src/api/authentications/handler.js
@@ -1,14 +1,11 @@
 
 class AuthenticationsHandler {
-  constructor(authenticationsService, usersService, tokenManager, validator) {
-    this._authenticationsService = authenticationsService;
+  constructor(usersService, tokenManager, validator) {
     this._usersService = usersService;
     this._tokenManager = tokenManager;
     this._validator = validator;
 
     this.postAuthenticationHandler = this.postAuthenticationHandler.bind(this);
-    this.putAuthenticationHandler = this.putAuthenticationHandler.bind(this);
-    this.deleteAuthenticationHandler = this.deleteAuthenticationHandler.bind(this);
   }
 
   async postAuthenticationHandler(request, h) {
@@ -18,50 +15,16 @@ class AuthenticationsHandler {
     const id = await this._usersService.verifyUserCredential(username, password);
 
     const accessToken = this._tokenManager.generateAccessToken({ id });
-    const refreshToken = this._tokenManager.generateRefreshToken({ id });
-
-    await this._authenticationsService.addRefreshToken(refreshToken);
 
     const response = h.response({
       status: 'success',
       message: 'authentication login berhasil',
       data: {
         accessToken,
-        refreshToken,
       },
     });
     response.code(201);
     return response;
-  }
-
-  async putAuthenticationHandler(request, h) {
-    this._validator.validatePutAuthenticationPayload(request.payload);
-
-    const { refreshToken } = request.payload;
-    await this._authenticationsService.verifyRefreshToken(refreshToken);
-    const { id } = this._tokenManager.verifyRefreshToken(refreshToken);
-
-    const accessToken = this._tokenManager.generateAccessToken({ id });
-    return {
-      status: 'success',
-      message: 'access token berhasil diperbarui',
-      data: {
-        accessToken,
-      },
-    };
-  }
-
-  async deleteAuthenticationHandler(request, h) {
-    this._validator.validateDeleteAuthenticationPayload(request.payload);
-
-    const { refreshToken } = request.payload;
-    await this._authenticationsService.verifyRefreshToken(refreshToken);
-    await this._authenticationsService.deleteRefreshToken(refreshToken);
-
-    return {
-      status: 'success',
-      message: 'authentication logout berhasil',
-    };
   }
 }
 
