# src/api/authentications/routes.js
@@ -4,16 +4,6 @@ const routes = (handler) => [
     path: '/authentications',
     handler: handler.postAuthenticationHandler,
   },
-  {
-    method: 'PUT',
-    path: '/authentications',
-    handler: handler.putAuthenticationHandler,
-  },
-  {
-    method: 'DELETE',
-    path: '/authentications',
-    handler: handler.deleteAuthenticationHandler,
-  },
 ];
 
 module.exports = routes;
